Progress Data Aggregation

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2302,7 +2302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2347,7 +2347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2370,7 +2370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -2397,7 +2397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2425,7 +2425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2435,7 +2435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -2937,7 +2937,7 @@
        "[15 rows x 21 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2949,7 +2949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2976,7 +2976,7 @@
        "Name: 14, dtype: object"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2989,7 +2989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -3348,7 +3348,7 @@
        "13       1,448           3          4.0  "
       ]
      },
-     "execution_count": 141,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3361,7 +3361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -3387,7 +3387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3416,7 +3416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -3789,7 +3789,7 @@
        "11               1,448                   3                          4.0  "
       ]
      },
-     "execution_count": 144,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3801,7 +3801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3818,7 +3818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -3855,22 +3855,14 @@
    "metadata": {},
    "source": [
     "## **5. Data Aggregation & Representation**\n",
-    "- Implementasikan proses kombinasi antara data set tersebut, dan lakukan statistik dasar."
+    "- Implementasikan proses kombinasi antara data set tersebut, dan lakukan statistik dasar.\n",
+    "- untuk menggabungkan 3 data diatas dibutuhkan sebuah kolom yang berfungsi sebagai primary key\n",
+    "- setelah di identifikasi didapati kolom nama kabupaten dapat dijadikan sebagai primary key"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# untuk menggabungkan 3 data diatas dibutuhkan sebuah kolom yang berfungsi sebagai primary key\n",
-    "# setelah di identifikasi didapati kolom nama kabupaten dapat dijadikan sebagai primary key"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -3904,7 +3896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -3946,7 +3938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -3975,6 +3967,109 @@
    ],
    "source": [
     "data_pdf_spark.select(\"Nama Kabupaten\").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Menyamakan Nama Format Kabupaten**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+-------+----+----------+----------+-----------------+\n",
+      "|Kabupaten    |Mandiri|Maju|Berkembang|Tertinggal|Sangat Tertinggal|\n",
+      "+-------------+-------+----+----------+----------+-----------------+\n",
+      "| Pontianak   |16     |35  |7         |2         |0                |\n",
+      "| Kubu Raya   |14     |21  |51        |30        |1                |\n",
+      "| Sambas      |8      |29  |108       |45        |3                |\n",
+      "| Bengkayang  |3      |6   |63        |48        |2                |\n",
+      "| Landak      |3      |8   |20        |99        |26               |\n",
+      "| Sanggau     |5      |19  |66        |73        |0                |\n",
+      "| Sekadau     |4      |6   |30        |43        |4                |\n",
+      "| Sintang     |6      |14  |104       |180       |86               |\n",
+      "| Melawi      |4      |3   |32        |83        |47               |\n",
+      "| K Hulu      |8      |23  |169       |75        |3                |\n",
+      "| Ketapang    |12     |18  |91        |96        |36               |\n",
+      "| Kayong Utara|4      |6   |26        |7         |0                |\n",
+      "|Jumlah       |87     |188 |767       |781       |208              |\n",
+      "+-------------+-------+----+----------+----------+-----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Replace string column value conditionally\n",
+    "# https://sparkbyexamples.com/pyspark/pyspark-replace-column-values/\n",
+    "from pyspark.sql.functions import when\n",
+    "from pyspark.sql.functions import regexp_replace\n",
+    "data_csv.withColumn('Kabupaten', \n",
+    "    when(data_csv.Kabupaten.startswith('Kab'),regexp_replace(data_csv.Kabupaten,'Kab','')) \\\n",
+    "   .otherwise(data_csv.Kabupaten)) \\\n",
+    "   .show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_json = data_json.withColumnRenamed(\"Kabupaten/Kota\", \"Kabupaten\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+----------------------+---------+-------------+------------------+---------------+-----------------+---------------------------------------------------------------------------------------+---------+----------------+------+---------------+---+\n",
+      "|Desa/Kelurahan  |Desa/Kelurahan Terluar|Kabupaten|Kecamatan    |Ketinggian DPL (M)|Koordinat Bujur|Koordinat Lintang|Lokasi                                                                                 |Luas (Ha)|Provinsi        |Status|Tipologi       |_id|\n",
+      "+----------------+----------------------+---------+-------------+------------------+---------------+-----------------+---------------------------------------------------------------------------------------+---------+----------------+------+---------------+---+\n",
+      "|SEMELAGI BESAR  |Tidak                 | SAMBAS  |SELAKAU      |0,00              |109,047260     |1,002419         |DESA SEMELAGI BESAR KECAMATAN SELAKAU KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT       |1.572,00 |KALIMANTAN BARAT|DESA  |Pesisir/Nelayan|1  |\n",
+      "|SUNGAI DAUN     |Tidak                 | SAMBAS  |SELAKAU      |0,00              |109,039646     |1,013922         |DESA SUNGAI DAUN KECAMATAN SELAKAU KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT          |2.090,00 |KALIMANTAN BARAT|DESA  |Pesisir/Nelayan|2  |\n",
+      "|SUNGAI RUSA     |Tidak                 | SAMBAS  |SELAKAU      |0,00              |109,018043     |1,021554         |DESA SUNGAI RUSA KECAMATAN SELAKAU KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT          |975,00   |KALIMANTAN BARAT|DESA  |Pesisir/Nelayan|3  |\n",
+      "|PANGKALAN BEMBAN|Tidak                 | SAMBAS  |SELAKAU      |8,00              |109,050941     |1,041183         |DESA PANGKALAN BEMBAN KECAMATAN SELAKAU KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT     |6.700,00 |KALIMANTAN BARAT|DESA  |Kehutanan      |4  |\n",
+      "|SUNGAI NYIRIH   |Tidak                 | SAMBAS  |SELAKAU      |0,00              |108,987724     |1,045459         |DESA SUNGAI NYIRIH KECAMATAN SELAKAU KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT        |0,00     |KALIMANTAN BARAT|DESA  |Pesisir/Nelayan|5  |\n",
+      "|KUALA           |Tidak                 | SAMBAS  |SELAKAU      |0,00              |108,962936     |1,073380         |DESA KUALA KECAMATAN SELAKAU KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT                |650,00   |KALIMANTAN BARAT|DESA  |Pesisir/Nelayan|6  |\n",
+      "|PARIT BARU      |Tidak                 | SAMBAS  |SELAKAU      |1,00              |108,989181     |1,074430         |DESA PARIT BARU KECAMATAN SELAKAU KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT           |1.175,00 |KALIMANTAN BARAT|DESA  |Pesisir/Nelayan|7  |\n",
+      "|TWI MENTIBAR    |Tidak                 | SAMBAS  |SELAKAU      |0,00              |0,000000       |0,000000         |DESA TWI MENTIBAR KECAMATAN SELAKAU KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT         |1.870,00 |KALIMANTAN BARAT|DESA  |Kehutanan      |8  |\n",
+      "|BENTUNAI        |Tidak                 | SAMBAS  |SELAKAU      |1.400,00          |109,038887     |1,070577         |DESA BENTUNAI KECAMATAN SELAKAU KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT             |1.600,00 |KALIMANTAN BARAT|DESA  |Persawahan     |9  |\n",
+      "|PARIT KONGSI    |Tidak                 | SAMBAS  |SELAKAU      |4,00              |109,021820     |1,057837         |DESA PARIT KONGSI KECAMATAN SELAKAU KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT         |929,00   |KALIMANTAN BARAT|DESA  |Kehutanan      |10 |\n",
+      "|GAYUNG BERSAMBUT|Tidak                 | SAMBAS  |SELAKAU      |0,00              |0,000000       |0,000000         |DESA GAYUNG BERSAMBUT KECAMATAN SELAKAU KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT     |488,00   |KALIMANTAN BARAT|DESA  |Kehutanan      |11 |\n",
+      "|GELIK           |Tidak                 | SAMBAS  |SELAKAU TIMUR|11.000,00         |109,063713     |1,066929         |DESA GELIK KECAMATAN SELAKAU TIMUR KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT          |979,00   |KALIMANTAN BARAT|DESA  |Persawahan     |12 |\n",
+      "|SERANGGAM       |Tidak                 | SAMBAS  |SELAKAU TIMUR|1,00              |109,083973     |1,066022         |DESA SERANGGAM KECAMATAN SELAKAU TIMUR KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT      |3.260,00 |KALIMANTAN BARAT|DESA  |Persawahan     |13 |\n",
+      "|SELAKAU TUA     |Tidak                 | SAMBAS  |SELAKAU TIMUR|0,00              |109,107601     |1,059308         |DESA SELAKAU TUA KECAMATAN SELAKAU TIMUR KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT    |6.439,00 |KALIMANTAN BARAT|DESA  |Persawahan     |14 |\n",
+      "|BUDUK SEMPADANG |Tidak                 | SAMBAS  |SELAKAU TIMUR|4,50              |109,180927     |1,023572         |DESA BUDUK SEMPADANG KECAMATAN SELAKAU TIMUR KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT|15.650,00|KALIMANTAN BARAT|DESA  |Kehutanan      |15 |\n",
+      "|PERAPAKAN       |Tidak                 | SAMBAS  |PEMANGKAT    |0,00              |109,026115     |1,164923         |DESA PERAPAKAN KECAMATAN PEMANGKAT KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT          |1.780,00 |KALIMANTAN BARAT|DESA  |Pesisir/Nelayan|16 |\n",
+      "|JELUTUNG        |Tidak                 | SAMBAS  |PEMANGKAT    |1.000,00          |108,999412     |1,136961         |DESA JELUTUNG KECAMATAN PEMANGKAT KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT           |1.616,00 |KALIMANTAN BARAT|DESA  |Persawahan     |17 |\n",
+      "|HARAPAN         |Tidak                 | SAMBAS  |PEMANGKAT    |2,00              |108,983331     |11,760240        |DESA HARAPAN KECAMATAN PEMANGKAT KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT            |407,56   |KALIMANTAN BARAT|DESA  |Persawahan     |18 |\n",
+      "|PENJAJAP        |Tidak                 | SAMBAS  |PEMANGKAT    |5,00              |108,990638     |1,172368         |DESA PENJAJAP KECAMATAN PEMANGKAT KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT           |450,00   |KALIMANTAN BARAT|DESA  |Pesisir/Nelayan|19 |\n",
+      "|PEMANGKAT KOTA  |Tidak                 | SAMBAS  |PEMANGKAT    |0,00              |108,946163     |1,141837         |DESA PEMANGKAT KOTA KECAMATAN PEMANGKAT KABUPATEN SAMBAS PROVINSI KALIMANTAN BARAT     |21,00    |KALIMANTAN BARAT|DESA  |Pesisir/Nelayan|20 |\n",
+      "+----------------+----------------------+---------+-------------+------------------+---------------+-----------------+---------------------------------------------------------------------------------------+---------+----------------+------+---------------+---+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_json.withColumn('Kabupaten', \n",
+    "    when(data_json.Kabupaten.startswith('KABUPATEN'),regexp_replace(data_json.Kabupaten,'KABUPATEN','')) \\\n",
+    "   .otherwise(data_json.Kabupaten)) \\\n",
+    "   .show(truncate=False)"
    ]
   }
  ],
